Squash:     7a9ce87694e8c6eaba9bd5713ef19c8476d39fc7 (HEAD -> try/native-multi-select, origin/try/native-multi-select) Fix selection in Firefox     eb668d3852ee408b0d247f7e296f59ba3dc71a47 Fix bad rebase     71bf361bdd133258706b900ee563693a2452ddb1 Fix block deletion e2e test     386810adf5c8d9c97d79ccda924205abf21f2b33 Add mouse drag test     41cb592dd41bac789e2f28057146afb4d2c46c2d Rewrite tests     c22a36b5ab2c247ecc04e790aa87b1162b07489f Polish     98327326e788943ffa83f3ecc491aea60ae61209 Remove mover min-height and multi select top border     cac2c20e4e27cbfa3fdd7feab8a488180399a957 Fix cross selection delay in Safari     116e89f01cac53fdb3dbb718b745c3c243fe8759 Hide hover effect on mouseleave     a3f1547217603b47d00a42e9952337827ee950b3 Correct toolbar position     24f817d142159e1a2264183740fcb31a0eff338e contenteditable false when there is multi selection     4eade53858dfe3109a94c7bbc700e6aa800392e2 Fix selection setting     9182fd3aaeb6a74065c09022844d967edb724035 Remove elements in the way of selection     98dae74909a3d7b229cf845e025b3668226458af Reselect block correctly     f1b08ac4a587bca7d787d34212905619d18db6e7 Smooth selection     3fb633a6572e501d2df2af87afd5403d9055e4f5 Native Multi Block Selection

--- a/packages/block-editor/src/components/block-list/style.scss
+++ b/packages/block-editor/src/components/block-list/style.scss
@@ -127,7 +127,6 @@
 
 	// Selected style.
 	&.is-selected {
-
 		> .block-editor-block-list__block-edit::before {
 			// Use opacity to work in various editor styles.
 			border-color: $dark-opacity-light-800;
@@ -154,6 +153,28 @@
 
 			@include break-small() {
 				box-shadow: -$block-left-border-width 0 0 0 $blue-medium-focus;
+			}
+		}
+	}
+
+	// Selected style.
+	&.is-multi-selected {
+		> .block-editor-block-list__block-edit::before {
+			border-left-color: $dark-opacity-light-800;
+			box-shadow: inset $block-left-border-width 0 0 0 $dark-gray-500;
+
+			.is-dark-theme & {
+				border-left-color: $light-opacity-light-800;
+				box-shadow: inset $block-left-border-width 0 0 0 $light-gray-600;
+			}
+
+			// Switch to outset borders on larger screens.
+			@include break-small() {
+				box-shadow: -$block-left-border-width 0 0 0 $dark-gray-500;
+
+				.is-dark-theme & {
+					box-shadow: -$block-left-border-width 0 0 0 $light-gray-600;
+				}
 			}
 		}
 	}
@@ -247,36 +268,6 @@
 /**
  * Cross-block selection
  */
-
-.block-editor-block-list__layout .block-editor-block-list__block {
-	::-moz-selection {
-		background-color: $blue-medium-highlight;
-	}
-
-	::selection {
-		background-color: $blue-medium-highlight;
-	}
-
-	// Selection style for multiple blocks.
-	&.is-multi-selected *::selection {
-		background-color: transparent;
-	}
-
-	&.is-multi-selected .block-editor-block-list__block-edit::before {
-		background: $blue-medium-highlight;
-
-		// Use opacity to work in various editor styles.
-		mix-blend-mode: multiply;
-
-		// Collapse extra vertical padding on selection.
-		top: -$block-padding;
-		bottom: -$block-padding;
-
-		.is-dark-theme & {
-			mix-blend-mode: soft-light;
-		}
-	}
-}
 
 
 /**
